Demonstrate static members of (non-static) inner classes